@@ -11,6 +11,10 @@ jsoup changelog
   * Improvement: ensure HTTP keepalives work when fetching content via body() and bodyAsBytes().
     <https://github.com/jhy/jsoup/issues/1232>
 
+  * Improvement: set the default max body size in Jsoup.Connection to 2MB (up from 1MB) so fewer people get trimmed
+    content if they have not set it, but still in sensible bounds. Also updated the default user-agent to improve
+    default compatibility.
+
   * Bugfix: on pages fetch by Jsoup.Connection, a "Mark Invalid" exception might be incorrectly thrown, or the page may
     miss some data. This occurred on larger pages when the file transfer was chunked, an an invalid HTML entity happened
     to cross a chunk boundary.
